# almond_os

./: .gitignore  Cargo.toml  Design.md  README.md  boot.bat  build.sh  headless  install.sh  makefile  stats.csv  stats.txt  target - Shortcut.lnk
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report  bug_report.yaml
disk/: Test.txt  global.cfg  hello  hello.asm  test.asm  test.conf
src/: lib.rs  main.rs  pci.rs  shell.rs  sys.rs  vfs.rs
src/shell/: almond_vm.rs  assembler.rs  beep.rs  cat.rs  clear.rs  debug.rs  elf.rs  hexdump.rs  ls.rs  mount.rs  sleep.rs  texteditor.rs
src/sys/: config.rs  debugger.rs  input.rs  interrupt.rs  mem.rs  serial.rs  sound.rs  storage.rs  terminal.rs  timer.rs  vga.rs
src/sys/debugger/: disassembler.rs
src/sys/interrupt/: gdt.rs  idt.rs  pics.rs  tss.rs
src/sys/mem/: allocator.rs  buffer.rs  frame_allocator.rs  mapper.rs  ringbuffer.rs
src/sys/mem/allocator/: bump.rs  linked_list.rs  null_allocator.rs
src/sys/sound/: pc_speaker.rs
src/sys/storage/: almond_fs.rs  ata.rs  block.rs  fs_utils.rs  mfs.rs  nut_fs.rs  sector.rs  ustar.rs
src/sys/storage/almond_fs/: bitmap.rs  block.rs  file.rs  filesystem.rs  metadata.rs
src/sys/storage/mfs/: api.rs  bitmap_block.rs  dir.rs  dir_entry.rs  file.rs  linked_block.rs  read_dir.rs  super_block.rs
src/sys/storage/nut_fs/: data_bitmap.rs  datablock.rs  meta_bitmap.rs  metablock.rs  partition.rs  superblock.rs
