[package]
name = "almond_os"
version = "0.3.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
null_allocator = []
list_allocator = []
bump_allocator = []

headless = []
shell = []

default = ["list_allocator"]

[dependencies]
# Low Level x86 Libraries
bootloader = {version = "0.9.19", features = ["map_physical_memory"]}
x86_64 = "0.14.6"

# Hardware Libraries
uart_16550 = "0.2.15"
pic8259 = "0.10.0"
pc-keyboard = "0.5.1"

# Utility Libraries
spin = "0.9.0"
volatile = "0.2.0"
bit_field = "0.10.0"
linked_list_allocator = "0.9.1"
vte = "0.10.1"

# Loaders
elf_rs = "0.2.0"

# Debugging Libraries
[dependencies.iced-x86]
version = "1.15.0"
default-features = false
features = ["no_std", "decoder", "nasm"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]



[package.metadata.bootimage]
run-args = [
    "-hdb", "mfs.img",
    "-serial", "stdio",
    "-soundhw", "pcspk"
]
